Kubernetes/Services and networking/ingress/00-hello-ingress.yaml
#ns - 1
---
kind: Namespace
apiVersion: v1
metadata:
  name: hello
    
#deployments - 2    
---
#artefact 1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v1
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello-app-v1
  template:
    metadata:
      labels:
        role: hello-app-v1
    spec:
      containers:
      - name: hello-v1
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "300m"

---
#artefact 2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-v2
  namespace: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello-app-v2
  template:
    metadata:
      labels:
        role: hello-app-v2
    spec:
      containers:
      - name: hello-v2
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "300m"

#hpa
---
#svc app v1
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-v1
  namespace: hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: hello-app-v1

---
#svc app v2
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-v2
  namespace: hello
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    role: hello-app-v2


#ing - 4
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: hello
spec:
  rules:
  - http:
      paths:
      #clusterIP 1
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-svc-v1
            port:
              number: 8080
      #clusterIP 2
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-svc-v2
            port:
              number: 8080
